<package>
  <name>rospack</name>
  <version>2.1.6</version>
  <description>ROS Package Tool</description>
  <maintainer email="dthomas@willowgarage.com">Dirk Thomas</maintainer>
  <license>BSD</license>  

  <url type="website">http://www.ros.org/wiki/rospack</url>
  <url type="repository">http://kforge.ros.org/rosrelease/rospack</url>

  <author>Brian Gerkey</author>
  <author>Morgan Quigley</author>

  <build_depend>boost</build_depend>
  <build_depend>catkin</build_depend>
  <build_depend>gtest</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>gtest</run_depend>

  <test_depend>python-coverage</test_depend>
</package>
