<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rospack</name>
  <version>2.5.6</version>
  <description>ROS Package Tool</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rospack</url>
  <url type="bugtracker">https://github.com/ros/rospack/issues</url>
  <url type="repository">https://github.com/ros/rospack</url>

  <author>Brian Gerkey</author>
  <author>Morgan Quigley</author>
  <author>Dirk Thomas</author>

  <depend>boost</depend>
  <depend>pkg-config</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend>tinyxml2</depend>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>gtest</build_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-pkg-modules</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg-modules</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rosdep-modules</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rosdep-modules</exec_depend>
  <exec_depend>ros_environment</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-coverage</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-coverage</test_depend>
</package>
